--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/main.css" />
     <title>Image Slider</title>
   </head>
   <body>
-    <h1>Image Slider</h1>
+    <div class="main-container">
+      <div class="img background-img"></div>
+      <div class="img foreground-img"></div>
+
+      <input type="range" id="slider" min="0" max="100" />
+    </div>
   </body>
+  <script src="/scripts/index.js"></script>
 </html>
