--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="img background-img"></div>
       <div class="img foreground-img"></div>
 
-      <input type="range" id="slider" min="0" max="100" />
+      <input type="range" id="slider" min="0" max="100" value="50" />
     </div>
   </body>
   <script src="/scripts/index.js"></script>
